# proto/main_micro.pb.go
@@ -1,58 +1,18 @@
 // Code generated by protoc-gen-go-micro. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-micro v3.10.4
-// - protoc              v3.19.6
+// - protoc              v4.25.1
 // source: main.proto
 
 package pb
 
 import (
 	context "context"
-	v3 "go.unistack.org/micro-server-http/v3"
 	client "go.unistack.org/micro/v3/client"
 )
 
 var (
 	BookServerName = "BookServer"
-)
-var (
-	BookServerServerEndpoints = []v3.EndpointMetadata{
-		{
-			Name:   "BookServer.Home",
-			Path:   "/",
-			Method: "GET",
-			Body:   "",
-			Stream: false,
-		},
-		{
-			Name:   "BookServer.Push",
-			Path:   "/push",
-			Method: "POST",
-			Body:   "*",
-			Stream: false,
-		},
-		{
-			Name:   "BookServer.Book",
-			Path:   "/book",
-			Method: "GET",
-			Body:   "",
-			Stream: false,
-		},
-		{
-			Name:   "BookServer.GetAllBooks",
-			Path:   "/allbooks",
-			Method: "GET",
-			Body:   "",
-			Stream: false,
-		},
-		{
-			Name:   "BookServer.GetAllBooksAndSort",
-			Path:   "/books",
-			Method: "GET",
-			Body:   "",
-			Stream: false,
-		},
-	}
 )
 
 type BookServerClient interface {
